; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/dsp/extr_yuv.c_WebPSamplerProcessPlane.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/dsp/extr_yuv.c_WebPSamplerProcessPlane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WebPSamplerProcessPlane(i32* %0, i32 %1, i32* %2, i32* %3, i32 %4, i32* %5, i32 %6, i32 %7, i32 %8, i32 (i32*, i32*, i32*, i32*, i32)* %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32 (i32*, i32*, i32*, i32*, i32)*, align 8
  %21 = alloca i32, align 4
  store i32* %0, i32** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32* %2, i32** %13, align 8
  store i32* %3, i32** %14, align 8
  store i32 %4, i32* %15, align 4
  store i32* %5, i32** %16, align 8
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32 (i32*, i32*, i32*, i32*, i32)* %9, i32 (i32*, i32*, i32*, i32*, i32)** %20, align 8
  store i32 0, i32* %21, align 4
  br label %22

22:                                               ; preds = %55, %10
  %23 = load i32, i32* %21, align 4
  %24 = load i32, i32* %19, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %58

26:                                               ; preds = %22
  %27 = load i32 (i32*, i32*, i32*, i32*, i32)*, i32 (i32*, i32*, i32*, i32*, i32)** %20, align 8
  %28 = load i32*, i32** %11, align 8
  %29 = load i32*, i32** %13, align 8
  %30 = load i32*, i32** %14, align 8
  %31 = load i32*, i32** %16, align 8
  %32 = load i32, i32* %18, align 4
  %33 = call i32 %27(i32* %28, i32* %29, i32* %30, i32* %31, i32 %32)
  %34 = load i32, i32* %12, align 4
  %35 = load i32*, i32** %11, align 8
  %36 = sext i32 %34 to i64
  %37 = getelementptr inbounds i32, i32* %35, i64 %36
  store i32* %37, i32** %11, align 8
  %38 = load i32, i32* %21, align 4
  %39 = and i32 %38, 1
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %50

41:                                               ; preds = %26
  %42 = load i32, i32* %15, align 4
  %43 = load i32*, i32** %13, align 8
  %44 = sext i32 %42 to i64
  %45 = getelementptr inbounds i32, i32* %43, i64 %44
  store i32* %45, i32** %13, align 8
  %46 = load i32, i32* %15, align 4
  %47 = load i32*, i32** %14, align 8
  %48 = sext i32 %46 to i64
  %49 = getelementptr inbounds i32, i32* %47, i64 %48
  store i32* %49, i32** %14, align 8
  br label %50

50:                                               ; preds = %41, %26
  %51 = load i32, i32* %17, align 4
  %52 = load i32*, i32** %16, align 8
  %53 = sext i32 %51 to i64
  %54 = getelementptr inbounds i32, i32* %52, i64 %53
  store i32* %54, i32** %16, align 8
  br label %55

55:                                               ; preds = %50
  %56 = load i32, i32* %21, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %21, align 4
  br label %22

58:                                               ; preds = %22
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
